added image, ingredients, and instructions to files

--- a/recipes/alicesvanillaslice.html
+++ b/recipes/alicesvanillaslice.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alice's Vanilla Slices</title>
 </head>
 <body>
     <h1>Alice's Vanilla Slices</h1>
+        <img src="https://media.istockphoto.com/id/1299015730/photo/vanilla-slice.jpg?s=612x612&w=0&k=20&c=OXmAFUHogV6BbNjzX_jUcNkh2P2OL99wspOM14SeqLc=" width="250" alt="Vanilla slice with custard filling and white icing topping">
+        <p>Vanilla slices consist of layers of puff pastry filled with vanilla custard cream, topped with icing or powdered sugar for a sweet and creamy dessert.</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>9x13 casserole dish</li>
+            <li>1 box vanilla cook pudding</li>
+            <li>1 can evaporated milk</li>
+            <li>1 cup milk</li>
+            <li>35% real whipped cream</li>
+            <li>2 Tbsp sugar</li>
+            <li>Graham wafers</li>
+            <li>1 cup icing sugar</li>
+            <li>2 Tbsp birds custard powder</li>
+            <li>2 Tbsp butter, <em>room temperature</em></li>
+            <li>chocolate sprinkles, <em>(optional)</em></li>
+        </ul>
+    <h2>Instructions</h2>
+            <ol>
+                <li>Place graham wafer on bottom of 9x13 casserole dish.</li>
+                <li>In a bowl, mix vanilla cook pudding, evaporated milk, and milk. Bring to a boil.</li>
+                <li>Pour over graham wafers, then put in fridge until cool.</li>
+                <li>In another bowl, whip together whipped cream with sugar. Put on top of previously cooled pudding. </li>
+                <li>Put another layer of graham wafers on top of whipped cream.</li>
+                <li>In a third bowl, icing sugar, custard powder, butter, and a splash of milk until mixture is spreadable.</li>
+                <li>Pour on top of wafers. Put in fridge until cold.</li>
+                <li>Serve with chocolate sprinkles.</li>
+            </ol>
 </body>
 </html>
