--- a/recipes/connerspumpkinpie.html
+++ b/recipes/connerspumpkinpie.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conner's Pumpkin Pie</title>
 </head>
 <body>
     <h1>Conner's Pumpkin Pie</h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqEyOkdrycRJ2pnAlwVUbrZH3IrIVsrHxYOUCE9wxYEsCGuk45ndXZBGUoLf8UhRIyFkM&usqp=CAU" width="250" alt="A slice of pumpkin pie on a black plate">
+        <p>Pumpkin pie is a traditional dessert made with a spiced pumpkin filling baked in a pastry crust, often enjoyed during autumn and Thanksgiving celebrations for its rich, creamy texture and warm, comforting flavors.</p>
+    <h2>Ingredients</h2>
+        <ul>
+            <li>2 eggs</li>
+            <li>400mL pumpkin puree</li>
+            <li>¼ tsp ground ginger</li>
+            <li>¾ cup evaporated milk</li>
+            <li>1 cup packed brown sugar</li>
+            <li>1 tsp ground cinnamon</li>
+            <li>½ tsp ground nutmeg</li>
+            <li>¼ tsp salt</li>
+            <li>9in. / 23cm unbaked deep dish pie shell</li>
+        </ul>
+    <h2>Instructions</h2>
+        <ol>
+            <li>In a medium bowl, beat eggs lightly.</li>
+            <li>Add pumpkin puree, brown sugar, cinnamon, nutmeg, ginger and salt; stir until well combined.</li>
+            <li>Blend in milk.</li>
+            <li>Pour filling into pie shell.</li>
+            <li>Bake at 425°F for 15 minutes.</li>
+            <li>Reduce oven temperature to 350°F and continue baking for 30-35 minutes.</li>
+        </ol>
 </body>
 </html>
