--- a/recipes/strawberryrhubarbcobbler.html
+++ b/recipes/strawberryrhubarbcobbler.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Strawberry Rhubarb Cobbler</title>
 </head>
 <body>
     <h1>Strawberry Rhubarb Cobbler</h1>
+        <img src="https://www.kingarthurbaking.com/sites/default/files/2023-06/strawberry-rhubarb-cobbler_0523.jpg" width="250" alt="Strawberry rhubarb cobbler in a white pan">
+        <p>Strawberry rhubarb cobbler is a delightful dessert featuring a sweet and tangy filling of strawberries and rhubarb, topped with a biscuit-like crust, perfect for showcasing the vibrant flavors of spring and summer.</p>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>9x9x2in. pan</li>
+            <li>3 cups chopped rhubarb</li>
+            <li>¼ tsp salt</li>
+            <li>2 cups fresh strawberries, <em>sliced</em></li>
+            <li>⅓ cup vegetable oil</li>
+            <li>⅔ cup milk</li>
+            <li>½ cup sugar to 1¾ cup sugar</li>
+            <!--Ask mom what this line in the recipe means-->
+            <li>1½ Tbsp butter</li>
+            <li>2 cups flour</li>
+            <li>1½ Tbsp brown sugar</li>
+            <li>3 Tbsp sugar</li>
+            <!--Why are there 2 sugar ingredients?-->
+            <li>¾ tsp cinnamon</li>
+            <li> 3 tsp baking powder</li>
+        </ul>
+    <h2>Instructions</h2>
+        <ol>
+            <li>Preheat oven to 400°F.</li>
+            <li>In the ungreased pan, combine rhubarb, strawberries and 1¾ cup sugar. Place in oven to warm.</li>
+            <li>In a medium bowl, combine flour, 3 Tbsp sugar, baking powder and salt.</li>
+            <li>Pour oil and milk into measuring cup; without stirring, add dry ingredients all at once.</li>
+            <!--All at once into what? Need more info-->
+            <li>Stir just until dry ingredients are moistened.</li>
+            <li>Drop dough by spoonful on to hot fruit from oven.</li>
+            <li>Dot each spoonful with butter.</li>
+            <li>Top with mixture of brown sugar and cinnamon.</li>
+            <li>Bake for 25 minutes or until nicely brown.</li>
+        </ol>
 </body>
 </html>
