--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-    <li><a href="alicesvanillaslice.html">Alice's Vanilla Slices</a></li>
-    <li><a href="connerspumpkinpie.html">Conner's Pumpkin Pie</a></li>
-    <li><a href="strawberryrhubarbcobbler.html">Strawberry Rhubarb Cobbler</a></li>
+    <li><a href="recipes/alicesvanillaslice.html">Alice's Vanilla Slices</a></li>
+    <li><a href="recipes/connerspumpkinpie.html">Conner's Pumpkin Pie</a></li>
+    <li><a href="recipes/strawberryrhubarbcobbler.html">Strawberry Rhubarb Cobbler</a></li>
     </ul>
 </body>
 </html>
