--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="recipes/alicesvanillaslice.html">Alice's Vanilla Slices</a></li>
-    <li><a href="recipes/connerspumpkinpie.html">Conner's Pumpkin Pie</a></li>
-    <li><a href="recipes/strawberryrhubarbcobbler.html">Strawberry Rhubarb Cobbler</a></li>
-    </ul>
+        <ul>
+            <li><a href="recipes/alicesvanillaslice.html">Alice's Vanilla Slices</a></li>
+            <li><a href="recipes/connerspumpkinpie.html">Conner's Pumpkin Pie</a></li>
+            <li><a href="recipes/strawberryrhubarbcobbler.html">Strawberry Rhubarb Cobbler</a></li>
+        </ul>
 </body>
 </html>
