--- a/recipes/connerspumpkinpie.html
+++ b/recipes/connerspumpkinpie.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conner's Pumpkin Pie</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Conner's Pumpkin Pie</h1>
