created divs for recipe links list

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/alicesvanillaslice.html">Alice's Vanilla Slices</a></li>
-            <li><a href="recipes/connerspumpkinpie.html">Conner's Pumpkin Pie</a></li>
-            <li><a href="recipes/strawberryrhubarbcobbler.html">Strawberry Rhubarb Cobbler</a></li>
-        </ul>
+    <div class="header"><h1>Odin Recipes</h1></div>
+        <div class="recipelinks">
+            <ul>
+                <div class="links"><li><a href="recipes/alicesvanillaslice.html">Alice's Vanilla Slices</a></li></div>
+                <div class="links"><li><a href="recipes/connerspumpkinpie.html">Conner's Pumpkin Pie</a></li></div>
+                <div class="links"><li><a href="recipes/strawberryrhubarbcobbler.html">Strawberry Rhubarb Cobbler</a></li></div>
+            </ul>
+        </div>
 </body>
 </html>
