added styling - centered img, descrip, styled ingred.

--- a/recipes/alicesvanillaslice.html
+++ b/recipes/alicesvanillaslice.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alice's Vanilla Slices</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Alice's Vanilla Slices</h1>
+    <div class="header recipe"><h1>Alice's Vanilla Slices</h1></div>
         <img src="https://media.istockphoto.com/id/1299015730/photo/vanilla-slice.jpg?s=612x612&w=0&k=20&c=OXmAFUHogV6BbNjzX_jUcNkh2P2OL99wspOM14SeqLc=" width="250" alt="Vanilla slice with custard filling and white icing topping">
-        <p>Vanilla slices consist of layers of puff pastry filled with vanilla custard cream, topped with icing or powdered sugar for a sweet and creamy dessert.</p>
-    <h2>Ingredients</h2>
-        <ul>
+        <div class="descrip"><p>Vanilla slices consist of layers of puff pastry filled with vanilla custard cream, topped with icing or powdered sugar for a sweet and creamy dessert.</p></div>
+    
+        <div class="ingcontainer">
+        <div class="ingredients"><h2>Ingredients</h2></div>
+        <div class="inglist"><ul>
             <li>9x13 casserole dish</li>
             <li>1 box vanilla cook pudding</li>
             <li>1 can evaporated milk</li>
@@ -23,7 +25,8 @@
             <li>2 Tbsp birds custard powder</li>
             <li>2 Tbsp butter, <em>room temperature</em></li>
             <li>chocolate sprinkles, <em>(optional)</em></li>
-        </ul>
+        </ul></div>
+        </div>
     <h2>Instructions</h2>
             <ol>
                 <li>Place graham wafer on bottom of 9x13 casserole dish.</li>
