--- a/recipes/strawberryrhubarbcobbler.html
+++ b/recipes/strawberryrhubarbcobbler.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strawberry Rhubarb Cobbler</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Strawberry Rhubarb Cobbler</h1>
-        <img src="https://www.kingarthurbaking.com/sites/default/files/2023-06/strawberry-rhubarb-cobbler_0523.jpg" width="250" alt="Strawberry rhubarb cobbler in a white pan">
-        <p>Strawberry rhubarb cobbler is a delightful dessert featuring a sweet and tangy filling of strawberries and rhubarb, topped with a biscuit-like crust, perfect for showcasing the vibrant flavors of spring and summer.</p>
+    <div class="header recipe"><h1>Strawberry Rhubarb Cobbler</h1></div>
+        <img class="foodimg" src="https://www.kingarthurbaking.com/sites/default/files/2023-06/strawberry-rhubarb-cobbler_0523.jpg" width="250" alt="Strawberry rhubarb cobbler in a white pan">
+        <div class="descrip"><p>Strawberry rhubarb cobbler is a delightful dessert featuring a sweet and tangy filling of strawberries and rhubarb, topped with a biscuit-like crust, perfect for showcasing the vibrant flavors of spring and summer.</p></div>
 
-    <h2>Ingredients</h2>
-        <ul>
-            <li>9x9x2in. pan</li>
-            <li>3 cups chopped rhubarb</li>
-            <li>¼ tsp salt</li>
-            <li>2 cups fresh strawberries, <em>sliced</em></li>
-            <li>⅓ cup vegetable oil</li>
-            <li>⅔ cup milk</li>
-            <li>½ cup sugar to 1¾ cup sugar</li>
+        <div class="ingcontainer">
+            <div class="ingredients"><h2>Ingredients</h2></div>
+            <div class="inglist"><ul>
+                <li>9x9x2in. pan</li>
+                <li>3 cups chopped rhubarb</li>
+                <li>¼ tsp salt</li>
+                <li>2 cups fresh strawberries, <em>sliced</em></li>
+                <li>⅓ cup vegetable oil</li>
+                <li>⅔ cup milk</li>
+                <li>½ cup sugar to 1¾ cup sugar</li>
             <!--Ask mom what this line in the recipe means-->
-            <li>1½ Tbsp butter</li>
-            <li>2 cups flour</li>
-            <li>1½ Tbsp brown sugar</li>
-            <li>3 Tbsp sugar</li>
+                <li>1½ Tbsp butter</li>
+                <li>2 cups flour</li>
+                <li>1½ Tbsp brown sugar</li>
+                <li>3 Tbsp sugar</li>
             <!--Why are there 2 sugar ingredients?-->
-            <li>¾ tsp cinnamon</li>
-            <li> 3 tsp baking powder</li>
-        </ul>
+                <li>¾ tsp cinnamon</li>
+                <li> 3 tsp baking powder</li>
+         </ul></div>
+        </div>
     <h2>Instructions</h2>
         <ol>
             <li>Preheat oven to 400°F.</li>
