--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header"><h1>Odin Recipes</h1></div>
         <div class="recipelinks">
-            <ul>
+            <ul class="homepagelist">
                 <div class="links"><li><a href="recipes/alicesvanillaslice.html">Alice's Vanilla Slices</a></li></div>
                 <div class="links"><li><a href="recipes/connerspumpkinpie.html">Conner's Pumpkin Pie</a></li></div>
                 <div class="links"><li><a href="recipes/strawberryrhubarbcobbler.html">Strawberry Rhubarb Cobbler</a></li></div>
