--- a/recipes/connerspumpkinpie.html
+++ b/recipes/connerspumpkinpie.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conner's Pumpkin Pie</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Conner's Pumpkin Pie</h1>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqEyOkdrycRJ2pnAlwVUbrZH3IrIVsrHxYOUCE9wxYEsCGuk45ndXZBGUoLf8UhRIyFkM&usqp=CAU" width="250" alt="A slice of pumpkin pie on a black plate">
-        <p>Pumpkin pie is a traditional dessert made with a spiced pumpkin filling baked in a pastry crust, often enjoyed during autumn and Thanksgiving celebrations for its rich, creamy texture and warm, comforting flavors.</p>
-    <h2>Ingredients</h2>
-        <ul>
+    <div class="header recipe"><h1 >Conner's Pumpkin Pie</h1></div>
+        <img class="foodimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqEyOkdrycRJ2pnAlwVUbrZH3IrIVsrHxYOUCE9wxYEsCGuk45ndXZBGUoLf8UhRIyFkM&usqp=CAU" width="250" alt="A slice of pumpkin pie on a black plate">
+        <div class="descrip"><p>Pumpkin pie is a traditional dessert made with a spiced pumpkin filling baked in a pastry crust, often enjoyed during autumn and Thanksgiving celebrations for its rich, creamy texture and warm, comforting flavors.</p></div>
+        
+        <div class="ingcontainer">
+        <div class="ingredients"><h2>Ingredients</h2></div>
+        <div class="inglist"><ul>
             <li>2 eggs</li>
             <li>400mL pumpkin puree</li>
             <li>¼ tsp ground ginger</li>
@@ -21,7 +23,8 @@
             <li>½ tsp ground nutmeg</li>
             <li>¼ tsp salt</li>
             <li>9in. / 23cm unbaked deep dish pie shell</li>
-        </ul>
+        </ul></div>
+        </div>
     <h2>Instructions</h2>
         <ol>
             <li>In a medium bowl, beat eggs lightly.</li>
