--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header"><h1>Odin Recipes</h1></div>
+    <div class="header homepg"><h1>Odin Recipes</h1></div>
         <div class="recipelinks">
             <ul class="homepagelist">
                 <div class="links"><li><a href="recipes/alicesvanillaslice.html">Alice's Vanilla Slices</a></li></div>
