--- a/recipes/alicesvanillaslice.html
+++ b/recipes/alicesvanillaslice.html
@@ -27,8 +27,9 @@
             <li>chocolate sprinkles, <em>(optional)</em></li>
         </ul></div>
         </div>
-    <h2>Instructions</h2>
-            <ol>
+    <div class="instcontainer">
+        <div class="instructions"><h2>Instructions</h2></div>
+            <div class="instrlist"><ol>
                 <li>Place graham wafer on bottom of 9x13 casserole dish.</li>
                 <li>In a bowl, mix vanilla cook pudding, evaporated milk, and milk. Bring to a boil.</li>
                 <li>Pour over graham wafers, then put in fridge until cool.</li>
@@ -37,6 +38,7 @@
                 <li>In a third bowl, icing sugar, custard powder, butter, and a splash of milk until mixture is spreadable.</li>
                 <li>Pour on top of wafers. Put in fridge until cold.</li>
                 <li>Serve with chocolate sprinkles.</li>
-            </ol>
+            </ol></div>
+        </div>
 </body>
 </html>
