added styling to rest of recipe files

--- a/recipes/connerspumpkinpie.html
+++ b/recipes/connerspumpkinpie.html
@@ -25,14 +25,16 @@
             <li>9in. / 23cm unbaked deep dish pie shell</li>
         </ul></div>
         </div>
-    <h2>Instructions</h2>
-        <ol>
+        <div class="instcontainer">
+        <div class="instructions"><h2>Instructions</h2></div>
+        <div class="instrlist"><ol>
             <li>In a medium bowl, beat eggs lightly.</li>
             <li>Add pumpkin puree, brown sugar, cinnamon, nutmeg, ginger and salt; stir until well combined.</li>
             <li>Blend in milk.</li>
             <li>Pour filling into pie shell.</li>
             <li>Bake at 425°F for 15 minutes.</li>
             <li>Reduce oven temperature to 350°F and continue baking for 30-35 minutes.</li>
-        </ol>
-</body>
+        </ol></div>
+        </div>
+    </body>
 </html>
