added missed styling

--- a/recipes/strawberryrhubarbcobbler.html
+++ b/recipes/strawberryrhubarbcobbler.html
@@ -31,8 +31,9 @@
                 <li> 3 tsp baking powder</li>
          </ul></div>
         </div>
-    <h2>Instructions</h2>
-        <ol>
+        <div class="ingcontainer">
+    <div class="ingredients"><h2>Instructions</h2></div>
+        <div class="inglist"><ol>
             <li>Preheat oven to 400°F.</li>
             <li>In the ungreased pan, combine rhubarb, strawberries and 1¾ cup sugar. Place in oven to warm.</li>
             <li>In a medium bowl, combine flour, 3 Tbsp sugar, baking powder and salt.</li>
@@ -43,6 +44,7 @@
             <li>Dot each spoonful with butter.</li>
             <li>Top with mixture of brown sugar and cinnamon.</li>
             <li>Bake for 25 minutes or until nicely brown.</li>
-        </ol>
+        </ol></div>
+        </div>
 </body>
 </html>
