--- a/recipes/strawberryrhubarbcobbler.html
+++ b/recipes/strawberryrhubarbcobbler.html
@@ -31,9 +31,9 @@
                 <li> 3 tsp baking powder</li>
          </ul></div>
         </div>
-        <div class="ingcontainer">
-    <div class="ingredients"><h2>Instructions</h2></div>
-        <div class="inglist"><ol>
+        <div class="instcontainer">
+    <div class="instructions"><h2>Instructions</h2></div>
+        <div class="instlist"><ol>
             <li>Preheat oven to 400°F.</li>
             <li>In the ungreased pan, combine rhubarb, strawberries and 1¾ cup sugar. Place in oven to warm.</li>
             <li>In a medium bowl, combine flour, 3 Tbsp sugar, baking powder and salt.</li>
