--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
     <title>Odin Recipes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="header"><h1>Odin Recipes</h1></div>
-        <div class="recipelinks">
-            <ul class="homepagelist">
-                <div class="links"><li><a href="recipes/alicesvanillaslice.html">Alice's Vanilla Slices</a></li></div>
-                <div class="links"><li><a href="recipes/connerspumpkinpie.html">Conner's Pumpkin Pie</a></li></div>
-                <div class="links"><li><a href="recipes/strawberryrhubarbcobbler.html">Strawberry Rhubarb Cobbler</a></li></div>
+<body class="hpage-main-body">
+    <div class="hpage-header">Odin Recipes</div>
+    <div class="hpage-body">
+        <div class="sidebar">
+            <ul class="sbar-ul">
+                <li class="hpage-li">Kitten</li>
+                <li class="hpage-li">Kitten</li>
+                <li class="hpage-li">Meow</li>
+                <li class="hpage-li">Meow</li>
             </ul>
         </div>
+        <div class="hpage-link-container">
+                <div class="cards"><a href="recipes/alicesvanillaslice.html"><img src="https://media.istockphoto.com/id/1299015730/photo/vanilla-slice.jpg?s=612x612&w=0&k=20&c=OXmAFUHogV6BbNjzX_jUcNkh2P2OL99wspOM14SeqLc=" width="250" alt="Vanilla slice with custard filling and white icing topping">Alice's Vanilla Slices</div>
+                <div class="cards"><a href="recipes/strawberryrhubarbcobbler.html"><img src="https://www.kingarthurbaking.com/sites/default/files/2023-06/strawberry-rhubarb-cobbler_0523.jpg" width="250" alt="Strawberry rhubarb cobbler in a white pan">Strawberry Rhubarb Cobbler</a></div>
+                <div class="cards"><a href="recipes/connerspumpkinpie.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqEyOkdrycRJ2pnAlwVUbrZH3IrIVsrHxYOUCE9wxYEsCGuk45ndXZBGUoLf8UhRIyFkM&usqp=CAU" width="250" alt="A slice of pumpkin pie on a black plate">Conner's Pumpkin Pie</a></div>
+                <div class="cards"><a href="recipes/alicesvanillaslice.html"><img src="https://media.istockphoto.com/id/1299015730/photo/vanilla-slice.jpg?s=612x612&w=0&k=20&c=OXmAFUHogV6BbNjzX_jUcNkh2P2OL99wspOM14SeqLc=" width="250" alt="Vanilla slice with custard filling and white icing topping">Alice's Vanilla Slices</div>
+                    <div class="cards"><a href="recipes/alicesvanillaslice.html"><img src="https://media.istockphoto.com/id/1299015730/photo/vanilla-slice.jpg?s=612x612&w=0&k=20&c=OXmAFUHogV6BbNjzX_jUcNkh2P2OL99wspOM14SeqLc=" width="250" alt="Vanilla slice with custard filling and white icing topping">Alice's Vanilla Slices</div>
+            </div>
+    </div>
+        <div class="footer">Made by Conner</div>
+    
 </body>
 </html>
