--- a/recipes/connerspumpkinpie.html
+++ b/recipes/connerspumpkinpie.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header recipe"><h1 >Conner's Pumpkin Pie</h1></div>
-        <img class="foodimg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqEyOkdrycRJ2pnAlwVUbrZH3IrIVsrHxYOUCE9wxYEsCGuk45ndXZBGUoLf8UhRIyFkM&usqp=CAU" width="250" alt="A slice of pumpkin pie on a black plate">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqEyOkdrycRJ2pnAlwVUbrZH3IrIVsrHxYOUCE9wxYEsCGuk45ndXZBGUoLf8UhRIyFkM&usqp=CAU" width="250" alt="A slice of pumpkin pie on a black plate">
         <div class="descrip"><p>Pumpkin pie is a traditional dessert made with a spiced pumpkin filling baked in a pastry crust, often enjoyed during autumn and Thanksgiving celebrations for its rich, creamy texture and warm, comforting flavors.</p></div>
         
         <div class="ingcontainer">
