--- a/recipes/strawberryrhubarbcobbler.html
+++ b/recipes/strawberryrhubarbcobbler.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header recipe"><h1>Strawberry Rhubarb Cobbler</h1></div>
-        <img class="foodimg" src="https://www.kingarthurbaking.com/sites/default/files/2023-06/strawberry-rhubarb-cobbler_0523.jpg" width="250" alt="Strawberry rhubarb cobbler in a white pan">
+        <img src="https://www.kingarthurbaking.com/sites/default/files/2023-06/strawberry-rhubarb-cobbler_0523.jpg" width="250" alt="Strawberry rhubarb cobbler in a white pan">
         <div class="descrip"><p>Strawberry rhubarb cobbler is a delightful dessert featuring a sweet and tangy filling of strawberries and rhubarb, topped with a biscuit-like crust, perfect for showcasing the vibrant flavors of spring and summer.</p></div>
 
         <div class="ingcontainer">
